@@ -5,7 +5,7 @@ module OpenGL
   GL_FUNCTIONS_RETVAL_MAP = {}
   @@gl_dll = nil
 
-  def self.load_dll(lib = 'libGL.dylib', path = '/System/Library/Frameworks/OpenGL.framework/Libraries')
+  def self.load_dll(lib = 'opengl32.dll', path = 'C:/Windows/System32')
     @@gl_dll = Fiddle.dlopen( path + '/' + lib )
   end
 
@@ -17,9 +17,18 @@ module OpenGL
   end
 
   def self.bind_command( sym )
-    GL_FUNCTIONS_MAP[sym] = Fiddle::Function.new( @@gl_dll[sym.to_s], 
-                                                  GL_FUNCTIONS_ARGS_MAP[sym],
-                                                  GL_FUNCTIONS_RETVAL_MAP[sym] )
-    raise RuntimeError if GL_FUNCTIONS_RETVAL_MAP[sym] == nil
+    begin
+      GL_FUNCTIONS_MAP[sym] = Fiddle::Function.new( @@gl_dll[sym.to_s], 
+                                                    GL_FUNCTIONS_ARGS_MAP[sym],
+                                                    GL_FUNCTIONS_RETVAL_MAP[sym] )
+    rescue Exception => e
+      if @@opengl_platform == :OPENGL_PLATFORM_WINDOWS
+        func_ptr = wglGetProcAddress(sym.to_s)
+        GL_FUNCTIONS_MAP[sym] = Fiddle::Function.new( func_ptr,
+                                                      GL_FUNCTIONS_ARGS_MAP[sym],
+                                                      GL_FUNCTIONS_RETVAL_MAP[sym] )
+      end
+      raise RuntimeError if GL_FUNCTIONS_RETVAL_MAP[sym] == nil
+    end
   end
 end
